--- a/files/fpm.conf.j2
+++ b/files/fpm.conf.j2
@@ -1,7 +1,7 @@
-[{{ app_username }}]
-user = {{ app_username }}
-group = {{ app_username }}
-listen = /run/php/php{{ php_version }}-fpm-{{ app_username }}.sock
+[{{ user_list }}]
+user = {{ user_list }}
+group = {{ user_list }}
+listen = /run/php/php{{ php_version }}-fpm-{{ user_list }}.sock
 listen.owner = www-data
 listen.group = www-data
 pm = dynamic
@@ -12,5 +12,5 @@ pm.max_spare_servers = 3
 catch_workers_output = yes
 php_flag[display_errors] = off
 php_admin_flag[log_errors] = on
-php_admin_value[error_log] = /var/log/php-fpm/{{ app_username }}/error.log
-php_admin_value[session.save_path] = /var/lib/php/sessions/{{ app_username }}
+php_admin_value[error_log] = /var/log/php-fpm/{{ user_list }}/error.log
+php_admin_value[session.save_path] = /var/lib/php/sessions/{{ user_list }}
