--- a/files/http.conf.j2
+++ b/files/http.conf.j2
@@ -10,13 +10,13 @@ server {
 
     index index.html index.php;
 
-    # Pass PHP files to PHP-FPM listening on /run/php/php{{ php_version }}-fpm-{{ app_username }}.sock
+    # Pass PHP files to PHP-FPM listening on /run/php/php{{ php_version }}-fpm-{{ user_list }}.sock
     location ~ \.php$ {
         try_files $uri =404;
 
         # Mitigate https://httpoxy.org/ vulnerabilities
         fastcgi_param HTTP_PROXY "";
-        fastcgi_pass unix:/run/php/php{{ php_version }}-fpm-{{ app_username }}.sock;
+        fastcgi_pass unix:/run/php/php{{ php_version }}-fpm-{{ user_list }}.sock;
         fastcgi_index index.php;
         include fastcgi.conf;
     }
