--- a/files/fpm.conf.j2
+++ b/files/fpm.conf.j2
@@ -14,3 +14,8 @@ php_flag[display_errors] = off
 php_admin_flag[log_errors] = on
 php_admin_value[error_log] = /var/log/php-fpm/{{ user_list }}/error.log
 php_admin_value[session.save_path] = /var/lib/php/sessions/{{ user_list }}
+
+
+{% for user in user_list %}
+[{{ user }}]
+{% endfor %}
