--- a/files/fpm.conf.j2
+++ b/files/fpm.conf.j2
@@ -1,7 +1,7 @@
-[{{ item.content }}]
-user = {{ item.content }}
-group = {{ item.content }}
-listen = /run/php/php{{ php_version }}-fpm-{{ item.content }}.sock
+[{{ item.filename }}]
+user = {{ item.filename }}
+group = {{ item.filename }}
+listen = /run/php/php{{ php_version }}-fpm-{{ item.filename }}.sock
 listen.owner = www-data
 listen.group = www-data
 pm = dynamic
@@ -12,10 +12,5 @@ pm.max_spare_servers = 3
 catch_workers_output = yes
 php_flag[display_errors] = off
 php_admin_flag[log_errors] = on
-php_admin_value[error_log] = /var/log/php-fpm/{{ item.content }}/error.log
-php_admin_value[session.save_path] = /var/lib/php/sessions/{{ item.content }}
-
-
-{% for user in item.content %}
-[{{ user }}]
-{% endfor %}
+php_admin_value[error_log] = /var/log/php-fpm/{{ item.filename }}/error.log
+php_admin_value[session.save_path] = /var/lib/php/sessions/{{ item.filename }}
