--- a/files/fpm.conf.j2
+++ b/files/fpm.conf.j2
@@ -1,7 +1,7 @@
-[{{ item.filename }}]
-user = {{ item.filename }}
-group = {{ item.filename }}
-listen = /run/php/php{{ php_version }}-fpm-{{ item.filename }}.sock
+[{{ item.user }}]
+user = {{ item.user }}
+group = {{ item.user }}
+listen = /run/php/php{{ php_version }}-fpm-{{ item.user }}.sock
 listen.owner = www-data
 listen.group = www-data
 pm = dynamic
@@ -12,5 +12,5 @@ pm.max_spare_servers = 3
 catch_workers_output = yes
 php_flag[display_errors] = off
 php_admin_flag[log_errors] = on
-php_admin_value[error_log] = /var/log/php-fpm/{{ item.filename }}/error.log
-php_admin_value[session.save_path] = /var/lib/php/sessions/{{ item.filename }}
+php_admin_value[error_log] = /var/log/php-fpm/{{ item.user }}/error.log
+php_admin_value[session.save_path] = /var/lib/php/sessions/{{ item.user }}
